--- a/sass/elements/_intro.scss
+++ b/sass/elements/_intro.scss
@@ -23,3 +23,7 @@
     }
     
 }
+
+.home-intro{
+    padding-top: 2rem;
+}
